--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@storybook/react-vite": "^8.0.9",
     "@storybook/test": "^8.0.9",
     "@tscircuit/builder": "^1.5.74",
+    "@tscircuit/schematic-viewer": "^1.2.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -40,6 +41,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "storybook": "^8.0.9",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "zod": "^3.23.4"
   }
 }
