--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@tscircuit/schematic-autolayout",
-  "private": true,
-  "version": "0.0.1",
+  "version": "0.0.4",
   "type": "module",
+  "main": "./dist/index.cjs",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "start": "storybook dev -p 6006",
-    "build": "tsc && vite build",
+    "build": "tsup src/lib/index.ts --dts --sourcemap",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
@@ -35,11 +38,13 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "esbuild": "^0.20.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-storybook": "^0.8.0",
     "storybook": "^8.0.9",
+    "tsup": "^8.0.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "zod": "^3.23.4"
